--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,3 +80,13 @@ p {
 .tiptap a:hover {
   color: #5644fc;
 }
+
+/* Hide scrollbar for all browsers */
+.scroll-hidden {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+
+.scroll-hidden::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
